styles.css
.container {
    display: flex;
    flex-direction: column;
    align-self: center;
    font-size: 48px;
    width: 400px;
    gap: 20px;
    padding: 20px;
}

body {
    display: flex;
    justify-content: center;
}

.display-container {
    display: flex;
    height: 80px;
    width: 400px;
    border: solid 1px black;
    box-sizing: border-box;
    padding: 10px;
    text-align: right;
}

.display {
    box-sizing: border-box;
    padding: 10px;
    width: 300px;
}

.display-buttons {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 60px;
    width: 80px;
}

.display-buttons button {
    width: 80px;
}

.buttons-container {
    align-self: center;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 400px;
}

.buttons-row {
    display: flex;
    justify-content: space-between;
    width: 400px;
}

.buttons-container button {
    width: 80px;
    height: 80px;
    font-size: inherit;
}

